--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <p>The first sentence.</p>
 <p>This is another paragraph.</p>
 <p>This is another paragraph.</p>
-</body>
+<p>This is a paragraph.</p>
+  </body>
 </html>
