--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
   <h1>This is a Heading</h1>
 <p>The first sentence.</p>
 <p>This is another paragraph.</p>
-  </body>
+<p>This is another paragraph.</p>
+</body>
 </html>
